--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+calamares-settings-solydxk (11.0.9) unstable; urgency=low
+
+  * Translate .desktop files
+  * Add triggers for lightdm files
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 08 Nov 2020 11:04:37 +0100
+
 calamares-settings-solydxk (11.0.8) unstable; urgency=low
 
   * Add triggers
