--- a/po/pt.po
+++ b/po/pt.po
@@ -2,33 +2,37 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Luis Filipe Teixeira <lufilte@gmail.com>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-10 16:30+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2020-11-08 11:32+0100\n"
+"PO-Revision-Date: 2020-11-08 10:33+0000\n"
+"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>, 2020\n"
+"Language-Team: Portuguese (https://www.transifex.com/abalfoort/teams/54212/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: install-solydxk.desktop.in.h:1 install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr ""
+msgstr "Instalar SolydXK"
 
 #: install-solydxk.desktop.in.h:2 install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr ""
+msgstr "Instalador Calamares"
 
 #: install-solydxk.desktop.in.h:3 install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr ""
+msgstr "Instalador-Calamares para SolydXK Live"
 
 #: install-solydxk.desktop.in.h:4 install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr ""
+msgstr "calamares;sistema;instalar;solydxk;instalador"
