--- a/po/sr.po
+++ b/po/sr.po
@@ -2,33 +2,38 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Slobodan Simić <slsimic@gmail.com>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-10 16:30+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2020-11-08 11:32+0100\n"
+"PO-Revision-Date: 2020-11-08 10:33+0000\n"
+"Last-Translator: Slobodan Simić <slsimic@gmail.com>, 2020\n"
+"Language-Team: Serbian (https://www.transifex.com/abalfoort/teams/54212/sr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: sr\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: install-solydxk.desktop.in.h:1 install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr ""
+msgstr "Инсталирај СолидИксК"
 
 #: install-solydxk.desktop.in.h:2 install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr ""
+msgstr "Каламарес инсталатер"
 
 #: install-solydxk.desktop.in.h:3 install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr ""
+msgstr "Каламарес — инсталатер за СолидИксК"
 
 #: install-solydxk.desktop.in.h:4 install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
 msgstr ""
+"calamares;system;install;solydxk;installer;каламарес;инсталатер;систем"
