--- a/debian/install
+++ b/debian/install
@@ -1,13 +1,10 @@
 calamares usr/share
 calamares-modules/* usr/lib/calamares/modules
-scripts/* usr/sbin
-*.desktop usr/share/applications
-install-solydxk usr/bin
-artwork/installsolydxk.xpm usr/share/pixmaps
-conf/calamares-desktop-icon.desktop etc/xdg/autostart
-conf/calamares-launch-startup.desktop etc/xdg/autostart
-conf/zz-disable-power-mgr.desktop etc/xdg/autostart
-conf/zz-light-locker-live.desktop etc/xdg/autostart
+scripts/sbin/* usr/sbin
+scripts/bin/* usr/bin
+conf/autostart/*.desktop etc/xdg/autostart
 conf/solydxk.conf etc/live/config.conf.d
-add-calamares-desktop-icon usr/bin
+conf/install-solydxk.desktop usr/share/applications
+conf/packages-non-free.service lib/systemd/system
+artwork/installsolydxk.xpm usr/share/pixmaps
 po/mo/*  usr/share/locale/
