--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (11.0.11) unstable; urgency=low
+
+  * Add arch=amd64 to local apt list if only amd64 is provided
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 12 Nov 2020 21:46:07 +0100
+
 calamares-settings-solydxk (11.0.10) unstable; urgency=low
 
   * Finetune modules configuration
