--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+calamares-settings-solydxk (11.0.13) unstable; urgency=low
+
+  * Fix bug listing multiple repo components with a comma instead of a space
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 15 Nov 2020 12:40:00 +0100
+
+calamares-settings-solydxk (11.0.12) unstable; urgency=low
+
+  * Add support for AMD graphics drivers
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 13 Nov 2020 10:26:44 +0100
+
 calamares-settings-solydxk (11.0.11) unstable; urgency=low
 
   * Add arch=amd64 to local apt list if only amd64 is provided
