--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+calamares-settings-solydxk (11.0.27) unstable; urgency=high
+
+  * Add module to fix system when using unencrypted /boot and encrypted /
+  * Skip localizing packages when lang = en_US
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 02 Apr 2022 19:25:06 +0200
+
 calamares-settings-solydxk (11.0.26) unstable; urgency=low
 
   * Move luksbootkeyfile and plymouthcfg up in settings.conf
