Updated translation: nl

--- a/po/calamares-settings-solydxk.pot
+++ b/po/calamares-settings-solydxk.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-12 09:07+0200\n"
+"POT-Creation-Date: 2022-04-14 14:21+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,19 +32,21 @@ msgstr ""
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
 "Previously encrypted partition found: {!s}.\n"
-"Please, provide the passphrase to unlock."
+"Please, provide an existing passphrase to unlock."
 msgstr ""
 
 #: calamares-modules/luksboot-fix/main.py:99
+msgid "Unable to create {!s}: {!s}"
+msgstr ""
+
+#: calamares-modules/luksboot-fix/main.py:142
 msgid "Unable to add key for {!s} in {!s}: {!s}"
 msgstr ""
 
-#: calamares-modules/luksboot-fix/main.py:124
-msgid "Unable to connect luks device {!s}: {!s}"
-msgstr ""
-
-#: calamares-modules/luksboot-fix/main.py:217
-msgid "Unable to create {!s}: {!s}"
+#: calamares-modules/luksboot-fix/main.py:275
+msgid ""
+"Unable to determine the file system type of {!s}.\n"
+"You need to configure this device manually."
 msgstr ""
 
 #: conf/install-solydxk.desktop.in.h:1
