--- a/po/pt.po
+++ b/po/pt.po
@@ -4,16 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Luis Filipe Teixeira <lufilte@gmail.com>, 2020
+# Luis Filipe Teixeira <lufilte@gmail.com>, 2022
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-08 11:32+0100\n"
+"POT-Creation-Date: 2022-04-14 13:04+0200\n"
 "PO-Revision-Date: 2020-11-08 10:33+0000\n"
-"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>, 2020\n"
+"Last-Translator: Luis Filipe Teixeira <lufilte@gmail.com>, 2022\n"
 "Language-Team: Portuguese (https://www.transifex.com/abalfoort/teams/54212/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,18 +21,54 @@ msgstr ""
 "Language: pt\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: install-solydxk.desktop.in.h:1 install-solydxk.desktop.in.h:1
+#: calamares-modules/luksboot-fix/main.py:28
+msgid "Calamares will continue despite this error."
+msgstr "Calamares continuará apesar deste erro."
+
+#: calamares-modules/luksboot-fix/main.py:30
+msgid "Error"
+msgstr "Erro"
+
+#: calamares-modules/luksboot-fix/main.py:46
+msgid "Passphrase"
+msgstr "Frase-senha"
+
+#: calamares-modules/luksboot-fix/main.py:50
+msgid ""
+"Previously encrypted partition found: {!s}.\n"
+"Please, provide an existing passphrase to unlock."
+msgstr ""
+"Partição cifada anteriormente encontrada: {!s}.\n"
+"Por favor, forneça uma frase-senha existente para desbloquear."
+
+#: calamares-modules/luksboot-fix/main.py:99
+msgid "Unable to create {!s}: {!s}"
+msgstr "Incapaz de criar {!s}: {!s}"
+
+#: calamares-modules/luksboot-fix/main.py:142
+msgid "Unable to add key for {!s} in {!s}: {!s}"
+msgstr "Incapaz de adicionar chave para {!s} em {!s}: {!s}"
+
+#: calamares-modules/luksboot-fix/main.py:275
+msgid ""
+"Unable to determine the file system type of {!s}.\n"
+"You need to configure this device manually."
+msgstr ""
+"Não é possível determinar o tipo de sistema de ficheiros de {!s}.\n"
+"Necessita de configurar este dispositivo manualmente."
+
+#: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
 msgstr "Instalar SolydXK"
 
-#: install-solydxk.desktop.in.h:2 install-solydxk.desktop.in.h:2
+#: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
 msgstr "Instalador Calamares"
 
-#: install-solydxk.desktop.in.h:3 install-solydxk.desktop.in.h:3
+#: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
 msgstr "Instalador-Calamares para SolydXK Live"
 
-#: install-solydxk.desktop.in.h:4 install-solydxk.desktop.in.h:4
+#: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
 msgstr "calamares;sistema;instalar;solydxk;instalador"
