--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+calamares-settings-solydxk (11.1.3) unstable; urgency=low
+
+  * Build separate packages for different solydxk versions
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 17 Apr 2022 12:15:11 +0200
+
+calamares-settings-solydxk (11.1.2) unstable; urgency=low
+
+  * Updated translation: pt
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 16 Apr 2022 07:51:22 +0200
+
+calamares-settings-solydxk (11.1.1) unstable; urgency=low
+
+  * Fix bug introduced by removing faulty /dev/mapper lines
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 15 Apr 2022 10:24:53 +0200
+
 calamares-settings-solydxk (11.1.0) unstable; urgency=low
 
   * Fix bug: "All key slots full"
