--- a/po/calamares-settings-solydxk.pot
+++ b/po/calamares-settings-solydxk.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-17 13:03+0200\n"
+"POT-Creation-Date: 2022-04-19 11:08+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,7 +31,8 @@ msgstr ""
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
-"Previously encrypted partition found: {!s}.\n"
+"Previously encrypted partition found:\n"
+"{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
 
@@ -43,7 +44,7 @@ msgstr ""
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
 msgstr ""
 
-#: calamares-modules/luksboot-fix/main.py:310
+#: calamares-modules/luksboot-fix/main.py:313
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
