--- a/po/nl.po
+++ b/po/nl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-14 13:04+0200\n"
+"POT-Creation-Date: 2022-04-18 11:15+0200\n"
 "PO-Revision-Date: 2020-11-08 10:33+0000\n"
 "Last-Translator: Arjen Balfoort <arjenbalfoort@hotmail.com>, 2022\n"
 "Language-Team: Dutch (https://www.transifex.com/abalfoort/teams/54212/nl/)\n"
@@ -35,21 +35,23 @@ msgstr "Wachtwoord"
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
-"Previously encrypted partition found: {!s}.\n"
+"Previously encrypted partition found:\n"
+"{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
-"Eerder versleutelde partitie gevonden: {!s}.\n"
+"Eerder versleutelde partitie gevonden:\n"
+"{!s}.\n"
 "Geef een bestaand wachtwoord om te ontgrendelen."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
 msgstr "Niet in staat om {!s} te maken: {!s}"
 
-#: calamares-modules/luksboot-fix/main.py:142
-msgid "Unable to add key for {!s} in {!s}: {!s}"
-msgstr "Niet in staat om sleutel voor {!s} toe te voegen in {!s}: {!s}"
+#: calamares-modules/luksboot-fix/main.py:148
+msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
+msgstr "Niet in staat om sleutel voor {!s} toe te voegen in {!s}: {!s} - {!s}"
 
-#: calamares-modules/luksboot-fix/main.py:275
+#: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
