--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -15,12 +15,12 @@ msgstr ""
 "POT-Creation-Date: 2022-04-18 11:15+0200\n"
 "PO-Revision-Date: 2020-11-08 10:33+0000\n"
 "Last-Translator: Arjen Balfoort <arjenbalfoort@hotmail.com>, 2022\n"
-"Language-Team: Portuguese (https://www.transifex.com/abalfoort/teams/54212/pt/)\n"
+"Language-Team: Portuguese (Brazil) (https://www.transifex.com/abalfoort/teams/54212/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
