--- a/debian/changelog
+++ b/debian/changelog
@@ -1,29 +1,47 @@
-calamares-settings-solydxk (11.1.4) unstable; urgency=low
+calamares-settings-solydxk (11.1.7) stable; urgency=low
+
+  * Updated translation: tr
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 16 May 2022 08:46:41 +0200
+
+calamares-settings-solydxk (11.1.6) stable; urgency=low
+
+  * Fix package-localize installing firefox over firefox-esr
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 07 May 2022 11:24:35 +0200
+
+calamares-settings-solydxk (11.1.5) stable; urgency=low
+
+  * Fix package-localize only localizing on exact match
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 23 Apr 2022 18:22:47 +0200
+
+calamares-settings-solydxk (11.1.4) stable; urgency=low
 
   * Add luksboot-fix.conf
   * Add mount point when asking for passphrase of encrypted partition
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 18 Apr 2022 10:53:02 +0200
 
-calamares-settings-solydxk (11.1.3) unstable; urgency=low
+calamares-settings-solydxk (11.1.3) stable; urgency=low
 
   * Build separate packages for different solydxk versions
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 17 Apr 2022 12:15:11 +0200
 
-calamares-settings-solydxk (11.1.2) unstable; urgency=low
+calamares-settings-solydxk (11.1.2) stable; urgency=low
 
   * Updated translation: pt
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 16 Apr 2022 07:51:22 +0200
 
-calamares-settings-solydxk (11.1.1) unstable; urgency=low
+calamares-settings-solydxk (11.1.1) stable; urgency=low
 
   * Fix bug introduced by removing faulty /dev/mapper lines
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 15 Apr 2022 10:24:53 +0200
 
-calamares-settings-solydxk (11.1.0) unstable; urgency=low
+calamares-settings-solydxk (11.1.0) stable; urgency=low
 
   * Fix bug: "All key slots full"
   * Keep asking for passphrase until fstype can be determined or user cancel
@@ -31,13 +49,13 @@ calamares-settings-solydxk (11.1.0) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 13 Apr 2022 14:33:26 +0200
 
-calamares-settings-solydxk (11.0.31) unstable; urgency=low
+calamares-settings-solydxk (11.0.31) stable; urgency=low
 
   * luksboot-fix: rewrite get_fstype function to fix "all key slots full"
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 13 Apr 2022 11:52:37 +0200
 
-calamares-settings-solydxk (11.0.30) unstable; urgency=low
+calamares-settings-solydxk (11.0.30) stable; urgency=low
 
   * Rename luks-ubootfix to luksboot-fix
   * luksboot-fix: add custom error dialog
@@ -46,7 +64,7 @@ calamares-settings-solydxk (11.0.30) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 06 Apr 2022 10:58:36 +0200
 
-calamares-settings-solydxk (11.0.29) unstable; urgency=low
+calamares-settings-solydxk (11.0.29) stable; urgency=low
 
   * Add error handling to luks-ubootfix
   * Replace sed command with python regexp
@@ -54,57 +72,57 @@ calamares-settings-solydxk (11.0.29) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 05 Apr 2022 09:54:57 +0200
 
-calamares-settings-solydxk (11.0.28) unstable; urgency=low
+calamares-settings-solydxk (11.0.28) stable; urgency=low
 
   * Remove luksopenswaphookcfg from settings.conf
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 04 Apr 2022 10:10:37 +0200
 
-calamares-settings-solydxk (11.0.27) unstable; urgency=high
+calamares-settings-solydxk (11.0.27) stable; urgency=high
 
   * Add module to fix system when using unencrypted /boot and encrypted /
   * Skip localizing packages when lang = en_US
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 02 Apr 2022 19:25:06 +0200
 
-calamares-settings-solydxk (11.0.26) unstable; urgency=low
+calamares-settings-solydxk (11.0.26) stable; urgency=low
 
   * Move luksbootkeyfile and plymouthcfg up in settings.conf
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 31 Mar 2022 15:05:58 +0200
 
-calamares-settings-solydxk (11.0.25) unstable; urgency=low
+calamares-settings-solydxk (11.0.25) stable; urgency=low
 
   * Fix ssd-config not adding to fstab
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 18 Jan 2022 12:59:01 +0100
 
-calamares-settings-solydxk (11.0.24) unstable; urgency=low
+calamares-settings-solydxk (11.0.24) stable; urgency=low
 
   * Updated translation: tr
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 08 Oct 2021 09:26:11 +0200
 
-calamares-settings-solydxk (11.0.23) unstable; urgency=low
+calamares-settings-solydxk (11.0.23) stable; urgency=low
 
   * Add custom partition layout (root + home)
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 27 Sep 2021 10:57:17 +0200
 
-calamares-settings-solydxk (11.0.22) unstable; urgency=low
+calamares-settings-solydxk (11.0.22) stable; urgency=low
 
   * Move /usr/share/calamares to /etc/calamares to comply with calamares-settings-debian
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 24 Sep 2021 15:04:47 +0200
 
-calamares-settings-solydxk (11.0.21) unstable; urgency=low
+calamares-settings-solydxk (11.0.21) stable; urgency=low
 
   * postinst: add save bootloaderEntryName and efiBootloaderId in bootloader.conf
   * Changed install order in settings.conf
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 04 Aug 2021 10:09:40 +0200
 
-calamares-settings-solydxk (11.0.20) unstable; urgency=low
+calamares-settings-solydxk (11.0.20) stable; urgency=low
 
   * Remove Calamares auto-launch
   * Add qttools5-dev-tools as a build dependency
@@ -112,32 +130,32 @@ calamares-settings-solydxk (11.0.20) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 21 Jun 2021 09:04:45 +0200
 
-calamares-settings-solydxk (11.0.19) unstable; urgency=low
+calamares-settings-solydxk (11.0.19) stable; urgency=low
 
   * Updated translation: de
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 13 Apr 2021 18:03:13 +0200
 
-calamares-settings-solydxk (11.0.18) unstable; urgency=low
+calamares-settings-solydxk (11.0.18) stable; urgency=low
 
   * Add module to configre system for SSD: ssd-config
   * Updated translations: pt, it
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 18 Feb 2021 13:38:45 +0100
 
-calamares-settings-solydxk (11.0.17) unstable; urgency=low
+calamares-settings-solydxk (11.0.17) stable; urgency=low
 
   * Fix bug crash in packages-conditional when installing on metal
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 31 Dec 2020 10:04:14 +0100
 
-calamares-settings-solydxk (11.0.16) unstable; urgency=low
+calamares-settings-solydxk (11.0.16) stable; urgency=low
 
   * Set system groups in users.conf
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 29 Dec 2020 10:57:47 +0100
 
-calamares-settings-solydxk (11.0.15) unstable; urgency=low
+calamares-settings-solydxk (11.0.15) stable; urgency=low
 
   * Add modules:
     - packages-conditional: install/remove packages when conditions are met.
@@ -145,31 +163,31 @@ calamares-settings-solydxk (11.0.15) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 26 Nov 2020 20:35:31 +0100
 
-calamares-settings-solydxk (11.0.14) unstable; urgency=low
+calamares-settings-solydxk (11.0.14) stable; urgency=low
 
   * Fix bug not configuring Grub theme
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 19 Nov 2020 11:35:10 +0100
 
-calamares-settings-solydxk (11.0.13) unstable; urgency=low
+calamares-settings-solydxk (11.0.13) stable; urgency=low
 
   * Fix bug listing multiple repo components with a comma instead of a space
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 15 Nov 2020 12:40:00 +0100
 
-calamares-settings-solydxk (11.0.12) unstable; urgency=low
+calamares-settings-solydxk (11.0.12) stable; urgency=low
 
   * Add support for AMD graphics drivers
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 13 Nov 2020 10:26:44 +0100
 
-calamares-settings-solydxk (11.0.11) unstable; urgency=low
+calamares-settings-solydxk (11.0.11) stable; urgency=low
 
   * Add arch=amd64 to local apt list if only amd64 is provided
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 12 Nov 2020 21:46:07 +0100
 
-calamares-settings-solydxk (11.0.10) unstable; urgency=low
+calamares-settings-solydxk (11.0.10) stable; urgency=low
 
   * Finetune modules configuration
   * Create packages-non-free module
@@ -177,7 +195,7 @@ calamares-settings-solydxk (11.0.10) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 10 Nov 2020 13:16:24 +0100
 
-calamares-settings-solydxk (11.0.9) unstable; urgency=low
+calamares-settings-solydxk (11.0.9) stable; urgency=low
 
   * Translate .desktop files
   * Add triggers for lightdm files
@@ -186,32 +204,32 @@ calamares-settings-solydxk (11.0.9) unstable; urgency=low
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 08 Nov 2020 11:04:37 +0100
 
-calamares-settings-solydxk (11.0.8) unstable; urgency=low
+calamares-settings-solydxk (11.0.8) stable; urgency=low
 
   * Add triggers
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 06 Nov 2020 11:29:42 +0100
 
-calamares-settings-solydxk (11.0.7) unstable; urgency=low
+calamares-settings-solydxk (11.0.7) stable; urgency=low
 
   * Fix bug in SolydK 11: not showing install icon
   * Fix bug not able to re-login with live user
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 05 Nov 2020 09:36:45 +0100
 
-calamares-settings-solydxk (11.0.6) unstable; urgency=low
+calamares-settings-solydxk (11.0.6) stable; urgency=low
 
   * Extend packages to remove after installation (packages.conf)
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 02 Nov 2020 08:46:53 +0100
 
-calamares-settings-solydxk (11.0.5) unstable; urgency=low
+calamares-settings-solydxk (11.0.5) stable; urgency=low
 
   * Fix not removing live/calamares packages after installation
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 01 Nov 2020 17:35:33 +0100
 
-calamares-settings-solydxk (11.0.4) unstable; urgency=low
+calamares-settings-solydxk (11.0.4) stable; urgency=low
 
   * Initial release (base: calamares-settings-debian-11.0.3)
 
