--- a/po/es_419.po
+++ b/po/es_419.po
@@ -2,32 +2,36 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# F A <jaw2pc@gmail.com>, 2022
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-07-18 11:18+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2022-04-18 11:15+0200\n"
+"PO-Revision-Date: 2020-11-08 10:33+0000\n"
+"Last-Translator: F A <jaw2pc@gmail.com>, 2022\n"
+"Language-Team: Spanish (Latin America) (https://www.transifex.com/abalfoort/teams/54212/es_419/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es_419\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
-msgstr ""
+msgstr "Calamares continuará a pesar de este error."
 
 #: calamares-modules/luksboot-fix/main.py:30
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
 #: calamares-modules/luksboot-fix/main.py:46
 msgid "Passphrase"
-msgstr ""
+msgstr "Frase de acceso"
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
@@ -35,33 +39,38 @@ msgid ""
 "{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
+"Se ha encontrado una partición previamente cifrada:\n"
+"{!s}.\n"
+"Por favor, proporcione una frase de acceso existente para desbloquear."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
-msgstr ""
+msgstr "No se puede crear {!s}: {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:148
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
-msgstr ""
+msgstr "No se puede añadir la clave para {!s} en {!s}: {!s} - {!s}"
 
-#: calamares-modules/luksboot-fix/main.py:313
+#: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
 msgstr ""
+"No se ha podido determinar el tipo de sistema de archivos de {!s}.\n"
+"Es necesario configurar este dispositivo manualmente."
 
-#: conf/install-solydxk.desktop.in.h:1 conf/install-solydxk.desktop.in.h:1
+#: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr ""
+msgstr "Instalar SolydXK"
 
-#: conf/install-solydxk.desktop.in.h:2 conf/install-solydxk.desktop.in.h:2
+#: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr ""
+msgstr "Instalador Calamares"
 
-#: conf/install-solydxk.desktop.in.h:3 conf/install-solydxk.desktop.in.h:3
+#: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr ""
+msgstr "Calamares - Instalador de SolydXK Live"
 
-#: conf/install-solydxk.desktop.in.h:4 conf/install-solydxk.desktop.in.h:4
+#: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr ""
+msgstr "calamares;system;install;solydxk;installer"
