--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,56 @@
+calamares-settings-solydxk (11.2.4) stable; urgency=low
+
+  * Fix packages-conditional crash when not in virtual environment
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 18 Jul 2022 10:35:03 +0200
+
+calamares-settings-solydxk (11.2.3) stable; urgency=low
+
+  * Updated translation: es, es_419 (latin america)
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 28 Jun 2022 12:03:22 +0200
+
+calamares-settings-solydxk (11.2.2) stable; urgency=low
+
+  * Add additional checks for ssd configuration
+  * Move localizing packages to packages module
+  * Merge modules packages-conditional and packages-localize
+  * Fix bootloader-config module not finding tmp root dir
+  * Fix packages-non-free if statement
+  * Update some module.conf files to the 3.3 versions
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 07 Jun 2022 10:30:16 +0200
+
+calamares-settings-solydxk (11.2.1) stable; urgency=low
+
+  * Make ssd-config better configurable
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 03 Jun 2022 12:01:27 +0200
+
+calamares-settings-solydxk (11.2.0) stable; urgency=low
+
+  * Set bootloader.conf - efiBootloaderId: "debian"
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 29 May 2022 10:45:50 +0200
+
+calamares-settings-solydxk (11.1.9) stable; urgency=low
+
+  * Add ssd-config.conf for ram disks and swappiness
+  * Follow pep8
+  * Check and use systemd for fstrim
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sat, 21 May 2022 12:11:42 +0200
+
+calamares-settings-solydxk (11.1.8) stable; urgency=low
+
+  * Add tmpOptions to fstab.conf
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 20 May 2022 11:46:09 +0200
+
 calamares-settings-solydxk (11.1.7) stable; urgency=low
 
   * Updated translation: tr
+  * Removed module bootluks-fix: implemented in calamares 3.2.57-2
 
  -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 16 May 2022 08:46:41 +0200
 
