--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+calamares-settings-solydxk (11.2.7) stable; urgency=low
+
+  * Updated translation: sr
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 05 Oct 2022 08:35:12 +0200
+
+calamares-settings-solydxk (11.2.6) stable; urgency=low
+
+  * bootloader-config: check for unencrypted /boot
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 12 Sep 2022 11:41:30 +0200
+
+calamares-settings-solydxk (11.2.5) stable; urgency=low
+
+  * bootloader-config: add GRUB_ENABLE_CRYPTODISK=y in target /etc/default/grub
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 11 Sep 2022 15:16:34 +0200
+
 calamares-settings-solydxk (11.2.4) stable; urgency=low
 
   * Fix packages-conditional crash when not in virtual environment
