Updated translation: de

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (11.2.8) stable; urgency=low
+
+  * Updated translation: de
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Thu, 06 Oct 2022 12:32:17 +0200
+
 calamares-settings-solydxk (11.2.7) stable; urgency=low
 
   * Updated translation: sr
