--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+calamares-settings-solydxk (11.3.0) stable; urgency=low
+
+  * Updated translation: lt
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Wed, 12 Oct 2022 08:55:56 +0200
+
+calamares-settings-solydxk (11.2.9) stable; urgency=low
+
+  * Fix installing localized packages in packages.conf
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Fri, 07 Oct 2022 09:17:40 +0200
+
 calamares-settings-solydxk (11.2.8) stable; urgency=low
 
   * Updated translation: de
