--- a/po/lt.po
+++ b/po/lt.po
@@ -2,32 +2,36 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
+# Translators:
+# Moo, 2022
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-12 09:02+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2022-04-18 11:15+0200\n"
+"PO-Revision-Date: 2020-11-08 10:33+0000\n"
+"Last-Translator: Moo, 2022\n"
+"Language-Team: Lithuanian (https://www.transifex.com/abalfoort/teams/54212/lt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: lt\n"
+"Plural-Forms: nplurals=4; plural=(n % 10 == 1 && (n % 100 > 19 || n % 100 < 11) ? 0 : (n % 10 >= 2 && n % 10 <=9) && (n % 100 > 19 || n % 100 < 11) ? 1 : n % 1 != 0 ? 2: 3);\n"
 
 #: calamares-modules/luksboot-fix/main.py:28
 msgid "Calamares will continue despite this error."
-msgstr ""
+msgstr "Calamares pratęs nepaisant šios klaidos."
 
 #: calamares-modules/luksboot-fix/main.py:30
 msgid "Error"
-msgstr ""
+msgstr "Klaida"
 
 #: calamares-modules/luksboot-fix/main.py:46
 msgid "Passphrase"
-msgstr ""
+msgstr "Slaptafrazė"
 
 #: calamares-modules/luksboot-fix/main.py:50
 msgid ""
@@ -35,33 +39,38 @@ msgid ""
 "{!s}.\n"
 "Please, provide an existing passphrase to unlock."
 msgstr ""
+"Rastas anksčiau šifruotas skaidinys:\n"
+"{!s}.\n"
+"Norėdami atrakinti, pateikite esamą slaptafrazę."
 
 #: calamares-modules/luksboot-fix/main.py:99
 msgid "Unable to create {!s}: {!s}"
-msgstr ""
+msgstr "Nepavyko sukurti {!s}: {!s}"
 
 #: calamares-modules/luksboot-fix/main.py:148
 msgid "Unable to add key for {!s} in {!s}: {!s} - {!s}"
-msgstr ""
+msgstr "Nepavyko pridėti rakto, skirto {!s} in {!s}: {!s} - {!s}"
 
-#: calamares-modules/luksboot-fix/main.py:313
+#: calamares-modules/luksboot-fix/main.py:310
 msgid ""
 "Unable to determine the file system type of {!s}.\n"
 "You need to configure this device manually."
 msgstr ""
+"Nepavyko nustatyti {!s} failų sistemos tipo.\n"
+"Turite sukonfigūruoti šį įrenginį rankiniu būdu."
 
-#: conf/install-solydxk.desktop.in.h:1 conf/install-solydxk.desktop.in.h:1
+#: conf/install-solydxk.desktop.in.h:1
 msgid "Install SolydXK"
-msgstr ""
+msgstr "Įdiegti SolydXK"
 
-#: conf/install-solydxk.desktop.in.h:2 conf/install-solydxk.desktop.in.h:2
+#: conf/install-solydxk.desktop.in.h:2
 msgid "Calamares Installer"
-msgstr ""
+msgstr "Calamares diegimo programa"
 
-#: conf/install-solydxk.desktop.in.h:3 conf/install-solydxk.desktop.in.h:3
+#: conf/install-solydxk.desktop.in.h:3
 msgid "Calamares - Installer for SolydXK Live"
-msgstr ""
+msgstr "Calamares - SolydXK Live diegimo programa"
 
-#: conf/install-solydxk.desktop.in.h:4 conf/install-solydxk.desktop.in.h:4
+#: conf/install-solydxk.desktop.in.h:4
 msgid "calamares;system;install;solydxk;installer"
-msgstr ""
+msgstr "calamares;sistema;diegimo programa;įdiegti;solydxk;"
