--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+calamares-settings-solydxk (11.3.3) stable; urgency=low
+
+  * Add test-share for testing in Qemu
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Sun, 01 Jan 2023 16:45:58 +0100
+
+calamares-settings-solydxk (11.3.2) stable; urgency=low
+
+  * Updated translation: pt
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Tue, 27 Dec 2022 16:47:40 +0100
+
 calamares-settings-solydxk (11.3.1) stable; urgency=low
 
   * Fix xdg autostart scripts
