--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+calamares-settings-solydxk (11.3.9) stable; urgency=low
+
+  * Revert to LUKS1 because of Grub2 issues
+
+ -- Arjen Balfoort <arjenbalfoort@hotmail.com>  Mon, 15 May 2023 08:27:16 +0200
+
 calamares-settings-solydxk (11.3.8) stable; urgency=low
 
   * Use LUKS2 for encryption
